tdf#167134 Allow different directions in LOOKUP

... for search vector and result vector when such vectors are given as
inline array.

AOO, Excel, Gnumeric and older LO versions allow it. Different
directions are also possible if the vector is given by a cell range.

The unintended change slipped in with commit
5079e1fb668b31989672efc097c82ced6cbf4137.

Besides the unit test for tdf#167134, I have added a second unit test
about other situations that have inline arrays as parameter of LOOKUP.
LO does currently not fail for them, but this test might prevent
unintended behavior changes in the future. Such tests do not yet exist.

Change-Id: I21dd6b75d54aa938dcffbd2375acc51d3168b904
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187289
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
Tested-by: Jenkins